[POO_SI] - versao atualizada +